--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "employee-tracker",
   "version": "1.0.0",
   "description": "Content management system",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -20,11 +20,9 @@
   "dependencies": {
     "console.table": "^0.10.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
     "inquirer": "^8.0.0",
     "mysql2": "^2.2.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
   }
 }
